--- a/SSRBruteForce.vcxproj
+++ b/SSRBruteForce.vcxproj
@@ -177,9 +177,11 @@
   <ItemGroup>
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Solver.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Level.h" />
+    <ClInclude Include="Solver.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="WitnessRNG\StdLib.h" />
   </ItemGroup>
